# macros

./: .project_env  CMakeBuildOpts.txt  CMakeLists.txt  README.md  TODO.md
src/: CMakeLists.txt
src/common/: CMakeLists.txt  char_buffer.h  cmdline.c  common.h  error.c  error.h  errors.c  errors.h  file_name.c  file_name.h  fileio.h  find_file.c  find_file.h  generic_list.h  hexdump.c  input_buffer.c  output_buffer.c  output_buffer.h  queue.c  queue.h  string_buffer.c  string_buffer.h  trace.c  trace.h
src/main/: CMakeLists.txt  alloc.c  char_buffer.c  char_buffer.h  chario.c  chario.h  cmdline.c  cmdline.h  common.c  common.h  context.c  context.h  define.c  define.h  error.c  error.h  expression.c  fileio.c  fileio.h  ifelse.c  ifelse.h  import.c  import.h  macros.c  macros.h  main.c  misc.c  misc.h  parms.c  parms.h  parser.y  pointer_list.c  process.c  process.h  reference.c  reference.h  scanner.c  scanner.h  scanner.l  string.c  (+11 more)
tests/: define.txt  inp1.txt  inp2.txt  runtests.py  scanner_state.c  syard.c  tempjunk1.txt  test1.in  test1.txt  test2.in  test2.txt  test3.txt
tests/20260422.bkup/: char_buffer.c  char_buffer.h  common.h  define.c  expression.c  expression.h  fileio.h  ifelse.c  macros.c  macros.h  string_buf.c  string_buf.h  string_list.c  symbols.c
tests/20260516.bkup/src/: CMakeLists.txt  define.c  define.h  ifelse.c  ifelse.h  macros.c  parms.c  process.c  reference.c  reference.h  symbols.c  symbols.h
tests/ctests/: line_buffer.c
tests/passing/: define.txt
tests/temp/: Makefile  _string.c  _string.h  parser.c  parser.h  parser.output  t  (+8 more)
(+29 files in other folders)
